syntax = "proto3";
package ghost.secrets;

option go_package = './http';

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Secret {
  string id = 1;
  string name = 2;
  string username = 3;
  string password = 4;
  string type = 5;
  map<string, string> fields = 6;
  google.protobuf.Timestamp last_modified = 7;
  string url = 8;
  string location = 9;
}

message Location {
  string location = 1;
}

message GetSecretRequest {
  string id = 1;
}

message GetSecretsByNameRequest {
  string name = 1;
}

message ChangeLocationRequest {
  string id = 1;
  string location = 2;
}

message DeleteSecretRequest {
  string id = 1;
}

service Keeper {
  rpc ListLocations (google.protobuf.Empty) returns (stream Location) {}
  rpc ListSecrets (Location) returns (stream Secret) {}
  rpc GetSecretsByName (GetSecretsByNameRequest) returns (stream Secret) {}
  rpc GetSecret (GetSecretRequest) returns (Secret) {}
  rpc SetSecret (Secret) returns (Secret) {}
  rpc CopySecret (ChangeLocationRequest) returns (Secret) {}
  rpc MoveSecret (ChangeLocationRequest) returns (Secret) {}
  rpc DeleteSecret (DeleteSecretRequest) returns (google.protobuf.Empty) {}
}
